src/SfxWeb/src/Styles/_tiles.scss
$dashboard-datapoint-leftbar-width: 3px;
$tile-width: 240px;
$large-window-width: 550px;

.dashboard-datapoints {
  vertical-align: top;
  text-align: left;
  margin: 10px 0 0 25px;

  .dashboard-datapoint {
      position: relative;
      padding: 0 0 0 $dashboard-datapoint-leftbar-width + 5px;

      .dashboard-datapoint-leftbar {
          position: absolute;
          left: 0;
          top: 0;
          bottom: 0;
          width: $dashboard-datapoint-leftbar-width;

          &.badge-ok {
              background: var(--badge-ok);
          }

          &.badge-warning {
              background: var(--badge-warning);
          }

          &.badge-error {
              background: var(--badge-error);
          }

          &.badge-unknown {
              background: var(--badge-unknown);
          }
      }

      .dashboard-datapoint-title {
          display: block;
          line-height: 1;
          margin-top: -2px;
      }

      .dashboard-datapoint-number {
          display: block;
          line-height: 1;
      }
  }
}

.tall {
  grid-row: span 2;
}

.long {
  grid-column: span 2;
}

@media (max-width: ($large-window-width + 1)) {
  .long {
    grid-column: span 1;
    overflow: auto;
  }
}

.tile-container {
  width: 100%;
  display: grid;
  grid-auto-flow: dense;
  grid-gap: 10px;
  grid-auto-rows: 150px;
  margin-bottom: 15px;

  @media (min-width: $large-window-width){
    grid-template-columns: repeat(auto-fit, $tile-width);
  }
}

